# NaturalGasGP

./: .gitignore  README.md  pyproject.toml
config/: default.yaml
data/henry_hub/: README.md
data/synthetic/: synthetic_forward_curve.csv
docs/: project_notes.md  report.md
experiments/: compare_gp_models.py  generate_synthetic_curve.py  henry_hub_kernel_ablation.py  henry_hub_metrics.py  henry_hub_temporal_split.py  make_report_assets.py  run_gp_full_kernel.py  run_gp_rbf.py  run_gp_seasonality.py  run_henry_hub.py
gp_model/: gas_forward_gp.py  io.py  kernels.py  metrics.py  plotting.py  utils.py
naturalgasgp/: cli.py
reports/henry_hub_results/: henry_hub_kernel_ablation_loocv_metrics.csv  henry_hub_temporal_split_predictions.csv
reports/synthetic_results/: gp_model_comparison.csv
tests/: test_smoke.py
vscode/: launch.json
